NAHE-31 : Hover state on cards

--- a/newamericadotorg/assets/scss/components/card/_accent.scss
+++ b/newamericadotorg/assets/scss/components/card/_accent.scss
@@ -11,7 +11,7 @@
     font-family: $label-font-family;
     transition: color 0.15s ease;
     margin: 0;
-    &:hover {
+    &:hover u {
       text-decoration: underline;
       text-decoration-color: color(turquoise);
       display: inline;
