--- a/newamericadotorg/assets/react/surveys-homepage/components/TeaserListing.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/TeaserListing.scss
@@ -66,7 +66,8 @@
     font-family: $label-font-family;
     transition: color 0.15s ease;
     margin: 0;
-    &:hover {
+    &:hover u {
+
       text-decoration: underline;
       text-decoration-color: color(turquoise);
       display: inline;
