--- a/survey/templates/survey/commentary.html
+++ b/survey/templates/survey/commentary.html
@@ -23,7 +23,7 @@
                 <div class="section-separator__line"></div>
               </div>
               {% for item in surveys %}
-                <a href="{{ item.url }}" class="card--accent card margin-bottom-10">
+                <a href="{{ item.url }}" class="card--accent margin-bottom-10">
                   <h4 class="card__title">
                     <u>{{ item.title }}</u>
                   </h4>
