fix: Update survey file conditional.

--- a/survey/templates/survey/survey.html
+++ b/survey/templates/survey/survey.html
@@ -106,7 +106,7 @@
             </div>
 
             <div class="survey-page__links margin-bottom-60">
-              {% if page.file.url %}
+              {% if page.file %}
                 <a class="button-secondary" href={{page.file.url}} target="_blank">
                   <i class="fa fa-download"></i>
                   Download Report
