Open docuemnt in new tab, titlecase tags

--- a/survey/templates/survey/survey.html
+++ b/survey/templates/survey/survey.html
@@ -86,7 +86,7 @@
                   <div class="margin-bottom-15">
                     <span>Topics:&nbsp;</span>
                     {% for tag in tags %}
-                      {{ tag.title }}
+                      {{ tag.title|title }}
                       {% if forloop.counter == tags|length|add:"-1" and tags|length > 2 %}
                         <span class="separator inline">, and&nbsp;</span>
                       {% elif forloop.counter == tags|length|add:"-1" %}
@@ -113,7 +113,7 @@
                 </a>
               {% endif %}
               {% if page.link %}
-                <a class="survey-page__link" href={{ page.link }}>View Survey Report on Source Website</a>
+                <a class="survey-page__link" target="_blank" href={{ page.link }}>View Survey Report on Source Website</a>
               {% endif %}
             </div>
 
