[Surveys] Squashed commit of the following, minus extraneous (mostly formatting) changes:
commit 7fd908bfc28baabf2af4a75c18e2c8db7887e72c
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Sun Jan 10 16:00:45 2021 -0800

    chore: Update migraion logic.

commit f3690eb743001fdf13e6fc0b372e13e674988a9b
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Sun Jan 10 15:31:10 2021 -0800

    chore: Update migration command.

commit 0a57c82ff1cd9750d9e6c3416dd46ecc0f4cb02c
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Sun Jan 10 15:12:24 2021 -0800

    fix: auths

commit bf84748ece00cb11b9464318bcbe26fec4f09a03
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Sun Jan 10 14:54:37 2021 -0800

    chore: Replace initial getters with getProp func. Cleanup.

commit 60ad6a3e7bea1601b7c303b9d6439380f9c549d8
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Sun Jan 10 13:41:22 2021 -0800

    chore: Update conditional checks in FE compoenets. Update migration file with prepopulation data. Remove testing data.

commit cf88469cc5f90e9121c526bae66dbb541ed056dc
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Fri Jan 8 17:42:21 2021 -0800

    chore: Add contional checks on CtaCards.

commit dd93fb6caf6e83cbfb55bf50682ea24f27d35077
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Fri Jan 8 17:04:41 2021 -0800

    chore: merge in fe updats and rerun migration.

commit b07e5339781057406ad51f5bd03feff61557c3bd
Merge: c94455d7 bcc21803
Author: Ian Goodrich <11083407+LeeMellon@users.noreply.github.com>
Date:   Fri Jan 8 17:01:44 2021 -0800

    Merge pull request #19 from LeeMellon/frontend-codereview-updates

    Frontend - WIP

commit bcc218036bbd133b8b81dd59e5975262a914382e
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Fri Jan 8 16:57:57 2021 -0800

    chore: Cleanup UI.

commit 2b0063de43f61848b2d8d4fe5b16711294c59b62
Author: IMGoodrich <igoodrich@phase2technology.com>
Date:   Fri Jan 8 16:48:

--- a/newamericadotorg/assets/scss/pages/critical.scss
+++ b/newamericadotorg/assets/scss/pages/critical.scss
@@ -4,3 +4,5 @@
 @import 'weekly/critical';
 @import 'person/critical';
 @import 'program/critical';
+@import 'survey/critical';
+@import 'insights/critical';
