[Surveys] Make surveys app not affect programs
- Make it so survey homepage is not a flavor of subprogram and is completely unrelated to program code.
- Update api, migration script, etc. to reflect that there is a single homepage, not a project and homepage
- Update some names to reflect that it's not a program
- Add documentantion for migration process

--- a/survey/templates/survey/surveys_home_page.html
+++ b/survey/templates/survey/surveys_home_page.html
@@ -1,1 +1,14 @@
 {% extends "programs/program.html" %}
+
+{% block body_id %}na-surveys-homepage{% endblock %}
+
+{% block content %}
+	{% csrf_token %}
+
+    <main class="program container--full-width">
+        <div id="na-react__survey-home-page"
+            data-program-type="subprogram"
+            data-page-id="{{ page.id }}">
+        </div>
+    </main>
+{% endblock %}
