--- a/newamericadotorg/assets/react/surveys-homepage/components/CheckboxGroup.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/CheckboxGroup.scss
@@ -72,7 +72,7 @@
     &::before {
       content: "";
       position: absolute;
-      top: calc(50% - 8px);
+      top: 8px;
       left: 0;
       box-sizing: border-box;
       width: 18px;
@@ -83,7 +83,7 @@
     &::after {
       content: "";
       position: absolute;
-      top: calc(50% - 2px);
+      top: 13px;
       left: 5px;
       box-sizing: border-box;
       width: 9px;
