--- a/person/templates/person/person.html
+++ b/person/templates/person/person.html
@@ -37,7 +37,9 @@
           {% if page.email or page.social_media|length > 0 %}
           <div class="person__social margin-0">
             <ul class="inline margin-top-5">
-               <a href="mailto:{{page.email}}" target="_blank" rel="noopener noreferrer" class="fa fa-envelope circle"></a>
+                {% if page.email %}
+                    <a href="mailto:{{page.email}}" target="_blank" rel="noopener noreferrer" class="fa fa-envelope circle"></a>
+                {% endif %}
               {% for s in page.social_media %}
                 <a href="{{s.value}}" target="_blank" rel="noopener noreferrer" class="fa fa-{{s.block_type}} circle"></a>
               {% endfor %}
