Use flexbox ordering to sort search buckets
- Moves empty buckets to end of list
- Use fragment for search bucket so that search results won't be wrapped in a div

--- a/newamericadotorg/assets/react/home-panels/pages/Search.scss
+++ b/newamericadotorg/assets/react/home-panels/pages/Search.scss
@@ -1,5 +1,7 @@
 .home__panels__search {
   margin-bottom: 115px;
+  display: flex;
+  flex-direction: column;
 }
 
 .search-results {
@@ -9,6 +11,10 @@
 
   &--loading {
     margin-bottom: 60px;
+  }
+
+  &--empty {
+    order: 2;
   }
 
   &__list {
