Change weekly to thread in newly-duplicated files

--- a/thread/templates/thread/thread.html
+++ b/thread/templates/thread/thread.html
@@ -4,8 +4,8 @@
 
 {% endblock %}
 
-{% block body_id %}na-weekly{% endblock %}
+{% block body_id %}na-thread{% endblock %}
 
 {% block content %}
-  <div id="na-react__weekly"></div>
+  <div id="na-react__thread"></div>
 {% endblock %}
