--- a/thread/templates/thread/thread_edition.html
+++ b/thread/templates/thread/thread_edition.html
@@ -1,5 +1,5 @@
-{% extends "./weekly.html" %}
+{% extends "./thread.html" %}
 
 {% block content %}
-  <div id="na-react__weekly" data-edition-id="{% firstof edition.id page.id %}" data-edition-slug="{% firstof edition.slug page.slug %}"></div>
+  <div id="na-react__thread" data-edition-id="{% firstof edition.id page.id %}" data-edition-slug="{% firstof edition.slug page.slug %}"></div>
 {% endblock %}
