--- a/home/templates/tags/top_menu.html
+++ b/home/templates/tags/top_menu.html
@@ -26,7 +26,7 @@
         <li class="mobile-menu__link__main"><a href="#">Channels</a>
             <div class="mobile-menu__toggle flip-arrow-black rotate"></div>
             <ul class="vertical menu">
-                <li class="mobile-menu__link__secondary"><a href="/weekly/">New America Weekly</a></li>
+                <li class="mobile-menu__link__secondary"><a href="/the-thread/">The Thread</a></li>
                 <li class="mobile-menu__link__secondary"><a href="https://context.newamerica.org/">Context on Medium</a></li>
                 <li class="mobile-menu__link__secondary"><a href="http://www.slate.com/articles/technology/future_tense.html">Future Tense on Slate</a></li>
             </ul>
@@ -46,7 +46,7 @@
                 <li class="mobile-menu__link__secondary"><a href="/books/">Books</a></li>
                 <li class="mobile-menu__link__secondary"><a href="/in-depth/">In Depth</a></li>
                 <li class="mobile-menu__link__secondary"><a href="/in-the-news/">In the News</a></li>
-                <li class="mobile-menu__link__secondary"><a href="/weekly/">New America Weekly</a></li>
+                <li class="mobile-menu__link__secondary"><a href="/the-thread/">The Thread</a></li>
                 <li class="mobile-menu__link__secondary"><a href="/podcasts/">Podcasts</a></li>
                 <li class="mobile-menu__link__secondary"><a href="/policy-papers/">Policy Papers</a></li>
                 <li class="mobile-menu__link__secondary"><a href="/press-releases/">Press Releases</a></li>
@@ -150,7 +150,7 @@
                                     <h1 class='header__link-group__heading'>Channels</h1>
                                 </div>
                                 <div class='header__link-group__secondary__entry-group'>
-                                    <a class="header__link-group__main-element" href="/weekly/">New America Weekly</a>
+                                    <a class="header__link-group__main-element" href="/the-thread/">The Thread</a>
                                     <a class="header__link-group__main-element" href="https://context.newamerica.org/">Context on Medium</a>
                                     <a class="header__link-group__main-element" href="http://www.slate.com/articles/technology/future_tense.html">Future Tense on Slate</a>
                                 </div>
@@ -177,7 +177,7 @@
                                 <li ><a class='header__simple-link-group__element' href="/books/">Books</a></li>
                                 <li ><a class='header__simple-link-group__element' href="/in-depth/">In Depth</a></li>
                                 <li ><a class='header__simple-link-group__element' href="/in-the-news/">In the News</a></li>
-                                <li ><a class='header__simple-link-group__element' href="/weekly/">New America Weekly</a></li>
+                                <li ><a class='header__simple-link-group__element' href="/the-thread/">The Thread</a></li>
                                 <li ><a class='header__simple-link-group__element' href="/podcasts/">Podcasts</a></li>
                                 <li ><a class='header__simple-link-group__element' href="/policy-papers/">Policy Papers</a></li>
                                 <li ><a class='header__simple-link-group__element' href="/press-releases/">Press Releases</a></li>
