Change homepage reference from weekly to thread

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -46,18 +46,18 @@
 	</section>
 	<section class="container--full-width beige homepage__weekly-promo-section scroll-target" data-scroll-trigger-point="bottom" data-scroll-top-offset="25vh">
 		<div class="container">
-			<a href="/weekly" class="homepage__promo-link">
+			<a href="/the-thread" class="homepage__promo-link">
 				<h1 class="promo margin-0">
 					<div class="block">
-						<span><em>New ideas & voices in policy,</em></span>
+						<span><em>Where policy, equity, and</em></span>
 					</div>
 					<div class="block">
-						<span><em>delivered every Thursday</em></span>
+						<span><em>culture come together.</em></span>
 					</div>
 				</h1>
 				<h3 class="margin-top-35 margin-bottom-0 homepage__promo-link">
 					<div class="block">
-						<span><em>Read our digital magazine, The Weekly</em></span>
+						<span><em>Read and subscribe to The Thread, a blog by New America.</em></span>
 					</div>
 				</h3>
 			</a>
