--- a/newamericadotorg/templates/components/header_dropdowns.html
+++ b/newamericadotorg/templates/components/header_dropdowns.html
@@ -13,6 +13,11 @@
     </a>
   </div>
   <div class="header__nav__dropdown">
+    <a href="/the-thread/" class="header__nav__dropdown__header no-drop">
+      <h4 class="link inline"><span><u>The Thread</u></span></h4>
+    </a>
+  </div>
+  <div class="header__nav__dropdown">
     <a href="/events/" class="header__nav__dropdown__header no-drop">
       <h4 class="link inline"><span><u>Events</u></span></h4>
     </a>
