--- a/newamericadotorg/assets/scss/components/form/_radio.scss
+++ b/newamericadotorg/assets/scss/components/form/_radio.scss
@@ -1,5 +1,6 @@
 .checkbox {
   $root: &;
+  $indicator-size: 12px;
 
   position: relative;
   display: block;
@@ -22,8 +23,8 @@
     position: absolute;
     top: 5px;
     left: 0;
-    width: 12px;
-    height: 12px;
+    width: $indicator-size;
+    height: $indicator-size;
     background: color(black, base, 0.3);
 
     #{$root}--radio-button & {
@@ -45,8 +46,8 @@
       position: absolute;
       display: none;
       content: '';
-      top: 6px;
-      left: 6px;
+      top: 0.5 * $indicator-size;
+      left: 0.5 * $indicator-size;
       width: 0px;
       height: 0px;
       @include transition(all 0.15s linear);
@@ -56,8 +57,8 @@
       #{$root}__input:checked ~ & {
         top: 0px;
         left: 0px;
-        width: 12px;
-        height: 12px;
+        width: $indicator-size;
+        height: $indicator-size;
         background: color(black, base, 1);
 
         #{$root}--radio-button & {
