--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -18,7 +18,7 @@
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MMGT6BG');</script>
+  })(window,document,'script','dataLayer','GTM-M4JVQ9Q');</script>
   <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -89,9 +89,11 @@
 </head>
 
 <body class="{% block body_class %}{% endblock %} {% if self.get_ancestors.2.slug == 'oti' or page.slug == 'oti'%}oti{% endif %}" id="{% block body_id %}{% endblock %}">
+  <!-- Google Tag Manager (noscript) -->
   <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MMGT6BG" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M4JVQ9Q" height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   {% wagtailuserbar %}
   {% if is_under_maintenance and not user.is_authenticated %}
