Fix full-bleed image spacing
Now has margin below when it has no image credit
Also removed css that wasn't being used

--- a/newamericadotorg/assets/react/report/components/Heading.scss
+++ b/newamericadotorg/assets/react/report/components/Heading.scss
@@ -76,13 +76,8 @@
     flex-direction: column;
   }
 
-  .card__image__background {
-    padding-bottom: 48.461538461%;
-    position: static;
-
-    @include media-breakpoint-down(tablet) {
-      padding-bottom: 75% !important;
-    }
+  .card__image__background-image:last-child {    
+    margin-bottom: 1.75rem;
   }
 }
 
