--- a/newamericadotorg/assets/react/report/components/Heading.scss
+++ b/newamericadotorg/assets/react/report/components/Heading.scss
@@ -74,11 +74,20 @@
     max-width: none;
     display: flex;
     flex-direction: column;
+
+    .card__image__background-image:last-child {    
+      margin-bottom: 1.75rem;
+    }
   }
 
-  .card__image__background-image:last-child {    
-    margin-bottom: 1.75rem;
-  }
+  .card__image__background {
+      padding-bottom: 48.461538461%;
+      position: static;
+  
+      @include media-breakpoint-down(tablet) {
+        padding-bottom: 75% !important;
+      }
+    }
 }
 
 .card__image__background-image {
